--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
    <head>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <title>Vinay Somawat - Computer Science Portfolio Webpage</title>
+      <title>Aaron Bakker - Portfolio</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="description" content="Portfolio webpage of Vinay Somawat" />
+      <meta name="description" content="Portfolio of Aaron Bakker" />
       <meta name="keywords" content="portfolio,website,personal website,github,projects,computer science and engineering" />
-      <meta name="author" content="Vinay Somawat" />
+      <meta name="author" content="Aaron Bakker" />
       <!--Social Media icons--> 
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -41,12 +41,13 @@
             <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
                <div class="text-center">
                   <div class="author-img" style="background-image: url(images/IMG_-wl1xai.jpg);"></div>
-                  <h1 id="colorlib-logo"><a href="https://vinaysomawat.github.io">Vinay Somawat</a></h1>
+                  <h1 id="colorlib-logo"><a href="https://aaronbakker.github.io">Vinay Somawat</a></h1>
                </div>
                <nav id="colorlib-main-menu" role="navigation" class="navbar">
                   <div id="navbar" class="collapse">
                      <ul>
                         <li><a href="#" data-nav-section="about">About</a></li>
+                        <li><a href="#" data-nav-section="language">Languages | Software</a></li>
                         <li><a href="#" data-nav-section="skills">Skills</a></li>
                         <li><a href="#" data-nav-section="experience">Work Experience</a></li>
                         <li><a href="#" data-nav-section="contact">Contact</a></li>
@@ -55,7 +56,7 @@
                </nav>
             </aside>
             <!--- Github ribbon ----------->
-            <a href="https://github.com/vinaysomawat/vinaysomawat.github.io" class="github-corner" aria-label="View source on GitHub">
+            <a href="https://github.com/aaronbakker/aaronbakker.github.io" class="github-corner" aria-label="View source on GitHub">
                <svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true">
                   <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
                   <path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
@@ -89,9 +90,9 @@
                            <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
                               <div class="col-md-12">
                                  <div class="about-desc">
-                                    <h1>Vinay <span style="color: #FACD69">Somawat</span></h1>
+                                    <h1>Aaron Bakker</h1>
                                     <hr>
-                                    <p>Software Developer | CS Undergrad, NIT Warangal</p>
+                                    <p>Data Analyst & Developer | Portland, OR</p>
                                  </div>
                               </div>
                            </div>
@@ -140,7 +141,7 @@
                            <div class="row">
                               <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
                                  <div class="hire">
-                                    <h2>You will be happy to know that I have completed over 20+ projects successfully!</h2>
+                                    <h2>Personal Maxim "Baseball is a soap opera that lends itself to probabilistic thinking. - Micheal Lewis"</h2>
 <!--                                    <a href="#" class="btn-hire" style="text-align: center;">Download Resume</a>-->
                                  </div>
                               </div>
@@ -149,14 +150,14 @@
                      </div>
                   </div>
                </section>
-               <!------Skills---------------->
-               <section class="colorlib-skills" data-section="skills">
+               <!------Languages---------------->
+               <section class="colorlib-languages" data-section="languages">
                   <div class="colorlib-narrow-content">
                      <div class="row">
                         <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
                            <!--	<span class="heading-meta">My Specialty</span> -->
                             <div class="about-desc">
-                           <h1>Skills</h1>
+                           <h1>Languages | Software</h1>
                            <hr>
                             </div>
                         </div>
@@ -265,18 +266,122 @@
                      </div>
                       </div>
                </section>
-                <section class="colorlib-skills" data-section="skills">
+               <!------Skills---------------->
+               <section class="colorlib-skills" data-section="skills">
                   <div class="colorlib-narrow-content">
                      <div class="row">
+                        <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
                            <!--	<span class="heading-meta">My Specialty</span> -->
                             <div class="about-desc">
-                           <h1>GitHub Profile Languages <span style="color: #f9bf3f">Pie Chart</span></h1>
+                           <h1>Languages | Software</h1>
                            <hr>
                             </div>
+                        </div>
                      </div>
-                      <iframe width="600" height="600" src="https://ionicabizau.github.io/github-profile-languages/api.html?vinaysomawat" frameborder="0"></iframe>
-                    </div>
-                </section>
+                     <p>Some of the significant aptitudes which will assist me with achieving your objectives.</p>
+                     <div class="row">
+                        <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+                           <div class="progress-wrap">
+                              <h3 style="font-weight: 500;">C/C++(STL)</h3>
+                              <div class="progress">
+                                 <div class="progress-bar color-1" role="progressbar" aria-valuenow="80"
+                                    aria-valuemin="0" aria-valuemax="100" style="width:80%">
+                                    <span>80%</span>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+                           <div class="progress-wrap">
+                              <h3 style="font-weight: 500;">Algorithms</h3>
+                              <div class="progress">
+                                 <div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
+                                    aria-valuemin="0" aria-valuemax="100" style="width:80%">
+                                    <span>80%</span>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+                        <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+                           <div class="progress-wrap">
+                              <h3 style="font-weight: 500;">Python/Django</h3>
+                              <div class="progress">
+                                 <div class="progress-bar color-2" role="progressbar" aria-valuenow="40"
+                                    aria-valuemin="0" aria-valuemax="100" style="width:40%">
+                                    <span>40%</span>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+                        <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+                           <div class="progress-wrap">
+                              <h3 style="font-weight: 500;">Angular/React</h3>
+                              <div class="progress">
+                                 <div class="progress-bar color-3" role="progressbar" aria-valuenow="30"
+                                    aria-valuemin="0" aria-valuemax="100" style="width:30%">
+                                    <span>30%</span>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+                        <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+                           <div class="progress-wrap">
+                              <h3 style="font-weight: 500;">HTML/Bootstrap</h3>
+                              <div class="progress">
+                                 <div class="progress-bar color-4" role="progressbar" aria-valuenow="70"
+                                    aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                                    <span>70%</span>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+                        <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+                           <div class="progress-wrap">
+                              <h3 style="font-weight: 500;">Java/Android/Spring</h3>
+                              <div class="progress">
+                                 <div class="progress-bar color-5" role="progressbar" aria-valuenow="50"
+                                    aria-valuemin="0" aria-valuemax="100" style="width:50%">
+                                    <span>50%</span>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+                        <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+                           <div class="progress-wrap">
+                              <h3 style="font-weight: 500;">MySQL/MongoDB</h3>
+                              <div class="progress">
+                                 <div class="progress-bar color-6" role="progressbar" aria-valuenow="50"
+                                    aria-valuemin="0" aria-valuemax="100" style="width:50%">
+                                    <span>50%</span>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+                        <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+                           <div class="progress-wrap">
+                              <h3 style="font-weight: 500;">Git/Postman</h3>
+                              <div class="progress">
+                                 <div class="progress-bar color-7" role="progressbar" aria-valuenow="70"
+                                    aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                                    <span>70%</span>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+                        <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+                           <div class="progress-wrap">
+                              <h3 style="font-weight: 500;">JavaScript/Nodejs</h3>
+                              <div class="progress">
+                                 <div class="progress-bar color-3" role="progressbar" aria-valuenow="20"
+                                    aria-valuemin="0" aria-valuemax="100" style="width:20%">
+                                    <span>20%</span>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+                     </div>
+                      </div>
+               </section>
                <!--------------Work Experience----------->
                <section class="colorlib-experience" data-section="experience">
                   <div class="colorlib-narrow-content">
@@ -366,7 +471,6 @@
                                  <p style="text-align: center"><strong>If you like my work and efforts, please consider buying me a coffee.<br>Thank you for your support!</strong></p>
                                  <div align=center>
                                     <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
-                                    <a class="bmc-button" target="_blank" href="https://www.buymeacoffee.com/r194dME8y"><img src="https://bmc-cdn.nyc3.digitaloceanspaces.com/BMC-button-images/BMC-btn-logo.svg" alt="Buy me a coffee"><span style="margin-left:5px">Buy me a coffee</span></a>
                                     <br><br>
                                     <p style="font-size: 30px; margin-bottom: 0px;"><a href="https://twitter.com/Vinay_Somawat" style="color: black;" class="fa fa-twitter"></a> &nbsp;&nbsp;&nbsp;&nbsp;
                                        <a href="https://www.linkedin.com/in/vinasomawat/" style="color: black;" class="fa fa-linkedin"></a> &nbsp;&nbsp;&nbsp;&nbsp;
