--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
                <div class="text-center">
                   <div class="author-img" style="background-image: url(images/IMG_-wl1xai.jpg);"></div>
-                  <h1 id="colorlib-logo"><a href="https://aaronbakker.github.io">Vinay Somawat</a></h1>
+                  <h1 id="colorlib-logo"><a href="https://aaronbakker.github.io">Aaron Bakker</a></h1>
                </div>
                <nav id="colorlib-main-menu" role="navigation" class="navbar">
                   <div id="navbar" class="collapse">
@@ -141,7 +141,7 @@
                            <div class="row">
                               <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
                                  <div class="hire">
-                                    <h2>Personal Maxim "Baseball is a soap opera that lends itself to probabilistic thinking. - Micheal Lewis"</h2>
+                                    <h2>Personal Maxim <span>"Baseball is a soap opera that lends itself to probabilistic thinking. - Micheal Lewis"</span></h2>
 <!--                                    <a href="#" class="btn-hire" style="text-align: center;">Download Resume</a>-->
                                  </div>
                               </div>
@@ -273,114 +273,11 @@
                         <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
                            <!--	<span class="heading-meta">My Specialty</span> -->
                             <div class="about-desc">
-                           <h1>Languages | Software</h1>
+                           <h1>Skills</h1>
                            <hr>
                             </div>
                         </div>
                      </div>
-                     <p>Some of the significant aptitudes which will assist me with achieving your objectives.</p>
-                     <div class="row">
-                        <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-                           <div class="progress-wrap">
-                              <h3 style="font-weight: 500;">C/C++(STL)</h3>
-                              <div class="progress">
-                                 <div class="progress-bar color-1" role="progressbar" aria-valuenow="80"
-                                    aria-valuemin="0" aria-valuemax="100" style="width:80%">
-                                    <span>80%</span>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-                           <div class="progress-wrap">
-                              <h3 style="font-weight: 500;">Algorithms</h3>
-                              <div class="progress">
-                                 <div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
-                                    aria-valuemin="0" aria-valuemax="100" style="width:80%">
-                                    <span>80%</span>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-                           <div class="progress-wrap">
-                              <h3 style="font-weight: 500;">Python/Django</h3>
-                              <div class="progress">
-                                 <div class="progress-bar color-2" role="progressbar" aria-valuenow="40"
-                                    aria-valuemin="0" aria-valuemax="100" style="width:40%">
-                                    <span>40%</span>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-                           <div class="progress-wrap">
-                              <h3 style="font-weight: 500;">Angular/React</h3>
-                              <div class="progress">
-                                 <div class="progress-bar color-3" role="progressbar" aria-valuenow="30"
-                                    aria-valuemin="0" aria-valuemax="100" style="width:30%">
-                                    <span>30%</span>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-                           <div class="progress-wrap">
-                              <h3 style="font-weight: 500;">HTML/Bootstrap</h3>
-                              <div class="progress">
-                                 <div class="progress-bar color-4" role="progressbar" aria-valuenow="70"
-                                    aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                                    <span>70%</span>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-                           <div class="progress-wrap">
-                              <h3 style="font-weight: 500;">Java/Android/Spring</h3>
-                              <div class="progress">
-                                 <div class="progress-bar color-5" role="progressbar" aria-valuenow="50"
-                                    aria-valuemin="0" aria-valuemax="100" style="width:50%">
-                                    <span>50%</span>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-                           <div class="progress-wrap">
-                              <h3 style="font-weight: 500;">MySQL/MongoDB</h3>
-                              <div class="progress">
-                                 <div class="progress-bar color-6" role="progressbar" aria-valuenow="50"
-                                    aria-valuemin="0" aria-valuemax="100" style="width:50%">
-                                    <span>50%</span>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-                           <div class="progress-wrap">
-                              <h3 style="font-weight: 500;">Git/Postman</h3>
-                              <div class="progress">
-                                 <div class="progress-bar color-7" role="progressbar" aria-valuenow="70"
-                                    aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                                    <span>70%</span>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-                           <div class="progress-wrap">
-                              <h3 style="font-weight: 500;">JavaScript/Nodejs</h3>
-                              <div class="progress">
-                                 <div class="progress-bar color-3" role="progressbar" aria-valuenow="20"
-                                    aria-valuemin="0" aria-valuemax="100" style="width:20%">
-                                    <span>20%</span>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                      </div>
                </section>
                <!--------------Work Experience----------->
                <section class="colorlib-experience" data-section="experience">
@@ -416,8 +313,8 @@
                                        <i class="fa fa-code"></i>
                                     </div>
                                     <div class="timeline-label">
-                                       <h2><a href="#">ThinkPedia LLP</a> <span>May 2019 - June 2019</span></h2>
-                                       <p><strong>Software Developement Engineering Intern</strong><br>Developed Customer Web Application for social media management from scratch.<br>Designed frontend with Angular 7 and backend services with Java framework spring-boot. Worked in System Design, System Testing, API Integration and Cloud Services for the deployment and production of the application.</p>
+                                       <h2><a href="#">Columbia Sportswear Company</a> <span>May 2019 - May 2019</span></h2>
+                                       <p><strong>Data Governance Analyst</strong><br>Bullet 1<br>Bullet 2</p>
                                        <p></p>
                                     </div>
                                  </div>
@@ -428,8 +325,8 @@
                                        <i class="fa fa-globe"></i>
                                     </div>
                                     <div class="timeline-label">
-                                       <h2><a href="#">Fossasia Organization</a> <span>December 2018 - April 2019 </span></h2>
-                                       <p><strong>Open Source Contributor</strong><br>Contributed in projects Badgeyay, OpenEvent Frontend, account.susi.ai. <br>Raised 13 pull requests and 10+ front-end and backend issues. Also reviewed, perfected and pushed the codes of other developers in production.</p>
+                                       <h2><a href="#">Nike</a> <span>October 2018 - May 2019 </span></h2>
+                                       <p><strong>Data & Reporting Analyst</strong><br>Bullet 1 <br>Bullet 2</p>
                                     </div>
                                  </div>
                               </article>
@@ -454,8 +351,7 @@
                                <h1>Contact</h1>
                               <hr>
                                </div>
-                              <p>On the off chance that you might want to connect with me, be it for investigating innovation, business, or to simply say hello, don't hesitate to send me an email at <strong><a href = "mailto: vinaysomawat@hotmail.com">vinaysomawat@hotmail.com</a></strong></p>
-                              <p>Visit my blog <strong><a href="https://programmingdiaries.herokuapp.com/">programming dairies.</a></strong></p>
+                              <p>On the off chance that you might want to connect with me, be it for investigating innovation, business, or to simply say hello, don't hesitate to send me an email at <strong><a href = "mailto: Aaron.K.Bakker@outlook.com">[email]/a></strong></p>
                            </div>
                         </div>
                      </div>
@@ -468,14 +364,13 @@
                         <div class="col-md-12">
                            <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
                               <div class="hire">
-                                 <p style="text-align: center"><strong>If you like my work and efforts, please consider buying me a coffee.<br>Thank you for your support!</strong></p>
                                  <div align=center>
                                     <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
                                     <br><br>
                                     <p style="font-size: 30px; margin-bottom: 0px;"><a href="https://twitter.com/Vinay_Somawat" style="color: black;" class="fa fa-twitter"></a> &nbsp;&nbsp;&nbsp;&nbsp;
-                                       <a href="https://www.linkedin.com/in/vinasomawat/" style="color: black;" class="fa fa-linkedin"></a> &nbsp;&nbsp;&nbsp;&nbsp;
-                                       <a href="https://www.quora.com/profile/Vinay-Somawat" style="color: black;" class="fa fa-quora"></a> &nbsp;&nbsp;&nbsp;&nbsp;
-                                       <a href="https://github.com/vinaysomawat" style="color: black;" class="fa fa-github"></a>
+                                       <a href="https://www.linkedin.com/in/aaron-bakker166" style="color: black;" class="fa fa-linkedin"></a> &nbsp;&nbsp;&nbsp;&nbsp;
+                                       <a href="https://www.researchgate.net/profile/Aaron_Bakker" style="color: black;" class="fab fa-researchgate"></a> &nbsp;&nbsp;&nbsp;&nbsp;
+                                       <a href="https://github.com/aaronbakker" style="color: black;" class="fa fa-github"></a>
                                     </p>
                                  </div>
                                  <p style="text-align: center; margin-bottom: -20px;"><strong>&copy; No Copyrights, feel free to use this template.</strong></p>
