--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                            <div class="row">
                               <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
                                  <div class="hire">
-                                    <h2>Personal Maxim <span>"Baseball is a soap opera that lends itself to probabilistic thinking. - Micheal Lewis"</span></h2>
+                                    <h2>Personal Maxim <span style="...">"Baseball is a soap opera that lends itself to probabilistic thinking. - Micheal Lewis"</span></h2>
 <!--                                    <a href="#" class="btn-hire" style="text-align: center;">Download Resume</a>-->
                                  </div>
                               </div>
@@ -150,6 +150,7 @@
                      </div>
                   </div>
                </section>
+               <br/>
                <!------Languages---------------->
                <section class="colorlib-languages" data-section="languages">
                   <div class="colorlib-narrow-content">
@@ -351,7 +352,7 @@
                                <h1>Contact</h1>
                               <hr>
                                </div>
-                              <p>On the off chance that you might want to connect with me, be it for investigating innovation, business, or to simply say hello, don't hesitate to send me an email at <strong><a href = "mailto: Aaron.K.Bakker@outlook.com">[email]/a></strong></p>
+                              <p>On the off chance that you might want to connect with me, be it for investigating innovation, business, or to simply say hello, don't hesitate to send me an email at <strong><a href = "mailto: Aaron.K.Bakker@outlook.com">[email]</strong></p>
                            </div>
                         </div>
                      </div>
@@ -369,7 +370,7 @@
                                     <br><br>
                                     <p style="font-size: 30px; margin-bottom: 0px;"><a href="https://twitter.com/Vinay_Somawat" style="color: black;" class="fa fa-twitter"></a> &nbsp;&nbsp;&nbsp;&nbsp;
                                        <a href="https://www.linkedin.com/in/aaron-bakker166" style="color: black;" class="fa fa-linkedin"></a> &nbsp;&nbsp;&nbsp;&nbsp;
-                                       <a href="https://www.researchgate.net/profile/Aaron_Bakker" style="color: black;" class="fab fa-researchgate"></a> &nbsp;&nbsp;&nbsp;&nbsp;
+                                       <a href="https://www.researchgate.net/profile/Aaron_Bakker" style="color: black;" class="fa fa-researchgate"></a> &nbsp;&nbsp;&nbsp;&nbsp;
                                        <a href="https://github.com/aaronbakker" style="color: black;" class="fa fa-github"></a>
                                     </p>
                                  </div>
