--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                            <div class="row">
                               <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
                                  <div class="hire">
-                                    <h2>Personal Maxim <span style="...">"Baseball is a soap opera that lends itself to probabilistic thinking. - Micheal Lewis"</span></h2>
+                                    <h2>Personal Maxim <span style="...">"Baseball is a soap opera that lends itself to probabilistic thinking." - Micheal Lewis</span></h2>
 <!--                                    <a href="#" class="btn-hire" style="text-align: center;">Download Resume</a>-->
                                  </div>
                               </div>
@@ -150,7 +150,6 @@
                      </div>
                   </div>
                </section>
-               <br/>
                <!------Languages---------------->
                <section class="colorlib-languages" data-section="languages">
                   <div class="colorlib-narrow-content">
@@ -352,7 +351,7 @@
                                <h1>Contact</h1>
                               <hr>
                                </div>
-                              <p>On the off chance that you might want to connect with me, be it for investigating innovation, business, or to simply say hello, don't hesitate to send me an email at <strong><a href = "mailto: Aaron.K.Bakker@outlook.com">[email]</strong></p>
+                              <p>On the off chance that you might want to connect with me, be it for investigating innovation, business, or to simply say hello, don't hesitate to send me an email at <strong><a href = "mailto: Aaron.K.Bakker@outlook.com">[email]</a></strong></p>
                            </div>
                         </div>
                      </div>
