--- a/index.html
+++ b/index.html
@@ -47,9 +47,11 @@
                   <div id="navbar" class="collapse">
                      <ul>
                         <li><a href="#" data-nav-section="about">About</a></li>
-                        <li><a href="#" data-nav-section="language">Languages | Software</a></li>
+                        <li><a href="#" data-nav-section="language">Languages</a></li>
+                        <li><a href="#" data-nav-section="software">Software</a></li>
                         <li><a href="#" data-nav-section="skills">Skills</a></li>
                         <li><a href="#" data-nav-section="experience">Work Experience</a></li>
+                        <li><a href="#" data-nav-section="academic">Academic</a></li>
                         <li><a href="#" data-nav-section="contact">Contact</a></li>
                      </ul>
                   </div>
@@ -150,8 +152,9 @@
                      </div>
                   </div>
                </section>
+               <br><br>
                <!------Languages---------------->
-               <section class="colorlib-languages" data-section="languages">
+               <section class="colorlib-languages" data-section="language">
                   <div class="colorlib-narrow-content">
                      <div class="row">
                         <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
@@ -166,7 +169,7 @@
                      <div class="row">
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
                            <div class="progress-wrap">
-                              <h3 style="font-weight: 500;">C/C++(STL)</h3>
+                              <h3 style="font-weight: 500;">Python | Matlab/NumPy</h3>
                               <div class="progress">
                                  <div class="progress-bar color-1" role="progressbar" aria-valuenow="80"
                                     aria-valuemin="0" aria-valuemax="100" style="width:80%">
@@ -279,13 +282,26 @@
                         </div>
                      </div>
                </section>
+               <!------Software---------------->
+               <section class="colorlib-software" data-section="software">
+                  <div class="colorlib-narrow-content">
+                     <div class="row">
+                        <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
+                           <!--	<span class="heading-meta">My Specialty</span> -->
+                            <div class="about-desc">
+                           <h1>Software</h1>
+                           <hr>
+                            </div>
+                        </div>
+                     </div>
+               </section>
                <!--------------Work Experience----------->
                <section class="colorlib-experience" data-section="experience">
                   <div class="colorlib-narrow-content">
                      <div class="row">
                         <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
                            <div class="about-desc">
-                            <h1>Work <span style="color: #f9bf3f">Experience</span></h1>
+                            <h1>Work Experience</h1>
                            <hr>
                             </div>
                         </div>
@@ -313,7 +329,7 @@
                                        <i class="fa fa-code"></i>
                                     </div>
                                     <div class="timeline-label">
-                                       <h2><a href="#">Columbia Sportswear Company</a> <span>May 2019 - May 2019</span></h2>
+                                       <h2><a href="#">Columbia Sportswear Company</a> <span>May 2019 - May 2020</span></h2>
                                        <p><strong>Data Governance Analyst</strong><br>Bullet 1<br>Bullet 2</p>
                                        <p></p>
                                     </div>
@@ -341,6 +357,19 @@
                      </div>
                   </div>
                </section>
+               <!------Academic---------------->
+               <section class="colorlib-academic" data-section="academic">
+                  <div class="colorlib-narrow-content">
+                     <div class="row">
+                        <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
+                           <!--	<span class="heading-meta">My Specialty</span> -->
+                            <div class="about-desc">
+                           <h1>Academic</h1>
+                           <hr>
+                            </div>
+                        </div>
+                     </div>
+               </section>
                <!--------Contact---------->
                <section class="colorlib-contact" data-section="contact">
                   <div class="colorlib-narrow-content">
@@ -366,10 +395,9 @@
                               <div class="hire">
                                  <div align=center>
                                     <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
-                                    <br><br>
                                     <p style="font-size: 30px; margin-bottom: 0px;"><a href="https://twitter.com/Vinay_Somawat" style="color: black;" class="fa fa-twitter"></a> &nbsp;&nbsp;&nbsp;&nbsp;
                                        <a href="https://www.linkedin.com/in/aaron-bakker166" style="color: black;" class="fa fa-linkedin"></a> &nbsp;&nbsp;&nbsp;&nbsp;
-                                       <a href="https://www.researchgate.net/profile/Aaron_Bakker" style="color: black;" class="fa fa-researchgate"></a> &nbsp;&nbsp;&nbsp;&nbsp;
+                                       <a href="https://www.researchgate.net/profile/Aaron_Bakker" style="color: black;"i class="fab fa-researchgate"></a> &nbsp;&nbsp;&nbsp;&nbsp;
                                        <a href="https://github.com/aaronbakker" style="color: black;" class="fa fa-github"></a>
                                     </p>
                                  </div>
