--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                   <div id="navbar" class="collapse">
                      <ul>
                         <li><a href="#" data-nav-section="about">About</a></li>
-                        <li><a href="#" data-nav-section="language">Languages</a></li>
+                        <li><a href="#" data-nav-section="language">Program Languages</a></li>
                         <li><a href="#" data-nav-section="software">Software</a></li>
                         <li><a href="#" data-nav-section="skills">Skills</a></li>
                         <li><a href="#" data-nav-section="experience">Work Experience</a></li>
@@ -99,22 +99,26 @@
                               </div>
                            </div>
                            <div class="row">
+
                               <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
-                                 <a href="cp.html" target="_blank">
-                                    <div class="services color-5">
-                                       <span class="icon2"><i class="fa fa-desktop"></i></span>
-                                       <h3>Programming<br> Profile</h3>
-                                    </div>
-                                 </a>
+                                 <div class="hovereffect">
+                                    <img class="img-responsive" src="htp://placehold.it/350x250" akt="">
+                                       <div class="overlay">
+                                          <h2>Effect 13</h2>
+                                             <p><a href="#">Program Languages</a> </p>
+                                       </div>
+                                 </div>
                               </div>
+
                               <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
                                  <a href="webdev.html" target="_blank">
                                     <div class="services color-2">
-                                       <span class="icon2"><i class="fa fa-code"></i></span>
+                                       <span class="icon2"><i class="fa fa-desktop"></i></span>
                                        <h3>Web<br> Designing</h3>
                                     </div>
                                  </a>
                               </div>
+
                               <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
                                  <a href="software.html" target="_blank">
                                     <div class="services color-3">
@@ -143,7 +147,7 @@
                            <div class="row">
                               <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
                                  <div class="hire">
-                                    <h2>Personal Maxim <span style="...">"Baseball is a soap opera that lends itself to probabilistic thinking." - Micheal Lewis</span></h2>
+                                    <h2>"Baseball is a soap opera that lends itself to probabilistic thinking." - Micheal Lewis</h2>
 <!--                                    <a href="#" class="btn-hire" style="text-align: center;">Download Resume</a>-->
                                  </div>
                               </div>
@@ -160,7 +164,7 @@
                         <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
                            <!--	<span class="heading-meta">My Specialty</span> -->
                             <div class="about-desc">
-                           <h1>Languages | Software</h1>
+                           <h1>Program Languages</h1>
                            <hr>
                             </div>
                         </div>
