--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
                               <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
                                  <div class="hovereffect">
-                                    <img class="img-responsive" src="htp://placehold.it/350x250" akt="">
+                                    <img class="img-responsive" src="htp://placehold.it/350x250" alt="">
                                        <div class="overlay">
                                           <h2>Effect 13</h2>
                                              <p><a href="#">Program Languages</a> </p>
@@ -273,19 +273,6 @@
                      </div>
                       </div>
                </section>
-               <!------Skills---------------->
-               <section class="colorlib-skills" data-section="skills">
-                  <div class="colorlib-narrow-content">
-                     <div class="row">
-                        <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-                           <!--	<span class="heading-meta">My Specialty</span> -->
-                            <div class="about-desc">
-                           <h1>Skills</h1>
-                           <hr>
-                            </div>
-                        </div>
-                     </div>
-               </section>
                <!------Software---------------->
                <section class="colorlib-software" data-section="software">
                   <div class="colorlib-narrow-content">
@@ -294,6 +281,19 @@
                            <!--	<span class="heading-meta">My Specialty</span> -->
                             <div class="about-desc">
                            <h1>Software</h1>
+                           <hr>
+                            </div>
+                        </div>
+                     </div>
+               </section>
+               <!------Skills---------------->
+               <section class="colorlib-skills" data-section="skills">
+                  <div class="colorlib-narrow-content">
+                     <div class="row">
+                        <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
+                           <!--	<span class="heading-meta">My Specialty</span> -->
+                            <div class="about-desc">
+                           <h1>Skills</h1>
                            <hr>
                             </div>
                         </div>
