--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
 
                               <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
                                  <div class="hovereffect">
-                                    <img class="img-responsive" src="htp://placehold.it/350x250" alt="">
+                                    <img class="img-responsive" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fintertoons.com%2Ftop-programming-languages-to-learn-in-2019.html&psig=AOvVaw3UUbIVnJFtfkQaKSmQhSZ1&ust=1589503248345000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCKDbtpmPsukCFQAAAAAdAAAAABAG" alt="">
                                        <div class="overlay">
                                           <h2>Effect 13</h2>
-                                             <p><a href="#">Program Languages</a> </p>
+                                             <p><a href="#" data-nav-section="language">Program Languages</a> </p>
                                        </div>
                                  </div>
                               </div>
