--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                   <div id="navbar" class="collapse">
                      <ul>
                         <li><a href="#" data-nav-section="about">About</a></li>
-                        <li><a href="#" data-nav-section="language">Languages</a></li>
+                        <li><a href="#" data-nav-section="language">Program Languages</a></li>
                         <li><a href="#" data-nav-section="software">Software</a></li>
                         <li><a href="#" data-nav-section="skills">Skills</a></li>
                         <li><a href="#" data-nav-section="experience">Work Experience</a></li>
@@ -100,7 +100,6 @@
                            </div>
                            <div class="row">
                               <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
-<<<<<<< HEAD
                                  <div class="hovereffect">
                                     <img class="img-responsive" src="" alt="">
                                        <div class="overlay">
@@ -108,14 +107,12 @@
                                              <p><a href="#" data-nav-section="language">Program Languages</a> </p>
                                        </div>
                                  </div>
-=======
                                  <a href="cp.html" target="_blank">
                                     <div class="services color-5">
                                        <span class="icon2"><i class="fa fa-desktop"></i></span>
                                        <h3>Programming<br> Profile</h3>
                                     </div>
                                  </a>
->>>>>>> parent of 2a39c70... Update index.html
                               </div>
                               <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
                                  <a href="webdev.html" target="_blank">
@@ -153,11 +150,7 @@
                            <div class="row">
                               <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
                                  <div class="hire">
-<<<<<<< HEAD
-                                    <h2>Personal Maxim <span style="...">"Baseball is a soap opera that lends itself to probabilistic thinking." - Micheal Lewis</span></h2>
-=======
-                                    <h2>Personal Maxim <span>"Baseball is a soap opera that lends itself to probabilistic thinking. - Micheal Lewis"</span></h2>
->>>>>>> parent of 834c5ec... Update index.html
+                                    <h2>"Baseball is a soap opera that lends itself to probabilistic thinking." <span style="...">- Micheal Lewis</span></h2>
 <!--                                    <a href="#" class="btn-hire" style="text-align: center;">Download Resume</a>-->
                                  </div>
                               </div>
@@ -166,10 +159,7 @@
                      </div>
                   </div>
                </section>
-<<<<<<< HEAD
                <br><br>
-=======
->>>>>>> parent of 834c5ec... Update index.html
                <!------Languages---------------->
                <section class="colorlib-languages" data-section="language">
                   <div class="colorlib-narrow-content">
@@ -177,7 +167,7 @@
                         <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
                            <!--	<span class="heading-meta">My Specialty</span> -->
                             <div class="about-desc">
-                           <h1>Languages | Software</h1>
+                           <h1>Languages</h1>
                            <hr>
                             </div>
                         </div>
@@ -397,11 +387,7 @@
                                <h1>Contact</h1>
                               <hr>
                                </div>
-<<<<<<< HEAD
-                              <p>On the off chance that you might want to connect with me, be it for investigating innovation, business, or to simply say hello, don't hesitate to send me an email at <strong><a href = "mailto: Aaron.K.Bakker@outlook.com">[email]</a></strong></p>
-=======
-                              <p>On the off chance that you might want to connect with me, be it for investigating innovation, business, or to simply say hello, don't hesitate to send me an email at <strong><a href = "mailto: Aaron.K.Bakker@outlook.com">[email]/a></strong></p>
->>>>>>> parent of 834c5ec... Update index.html
+                              <p>Feel free to contact me with any questions! <strong><a href = "mailto: Aaron.K.Bakker@outlook.com">email</a></strong></p>
                            </div>
                         </div>
                      </div>
@@ -416,17 +402,14 @@
                               <div class="hire">
                                  <div align=center>
                                     <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
-                                    <p style="font-size: 30px; margin-bottom: 0px;"><a href="https://twitter.com/Vinay_Somawat" style="color: black;" class="fa fa-twitter"></a> &nbsp;&nbsp;&nbsp;&nbsp;
-                                       <a href="https://www.linkedin.com/in/aaron-bakker166" style="color: black;" class="fa fa-linkedin"></a> &nbsp;&nbsp;&nbsp;&nbsp;
-<<<<<<< HEAD
-                                       <a href="https://www.researchgate.net/profile/Aaron_Bakker" style="color: black;"i class="fab fa-researchgate"></a> &nbsp;&nbsp;&nbsp;&nbsp;
-=======
+                                    <p style="font-size: 30px; margin-bottom: 0px;">
+                                       <a href="https://www.linkedin.com/in/aaron-bakker166" style="color: black;" class="fa fa-linkedin"</a> &nbsp;&nbsp;&nbsp;&nbsp;
+                                       <a href="https://scholar.google.com/citations?hl=en&user=ng-4XxAAAAAJ" style="color: black;" class="fas fa-graduation-cap"></a> &nbsp;&nbsp;&nbsp;&nbsp;
                                        <a href="https://www.researchgate.net/profile/Aaron_Bakker" style="color: black;" class="fab fa-researchgate"></a> &nbsp;&nbsp;&nbsp;&nbsp;
->>>>>>> parent of 834c5ec... Update index.html
                                        <a href="https://github.com/aaronbakker" style="color: black;" class="fa fa-github"></a>
                                     </p>
                                  </div>
-                                 <p style="text-align: center; margin-bottom: -20px;"><strong>&copy; No Copyrights, feel free to use this template.</strong></p>
+                                 <p style="text-align: center; margin-bottom: -20px;"><strong>&copy; No Copyrights</strong></p>
                               </div>
                            </div>
                         </div>
