--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                                <h1>Contact</h1>
                               <hr>
                                </div>
-                              <p>Feel free to contact me with any questions! <strong><a href = "mailto: Aaron.K.Bakker@outlook.com">email</a></strong></p>
+                              <p>Feel free to contact me with any questions! <strong><a href = "mailto: Aaron.K.Bakker@outlook.com">Aaron K Bakker at Outlook</a></strong></p>
                            </div>
                         </div>
                      </div>
