--- a/index.html
+++ b/index.html
@@ -402,10 +402,9 @@
                               <div class="hire">
                                  <div align=center>
                                     <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
-                                    <p style="font-size: 30px; margin-bottom: 0px;">
-                                       <a href="https://www.linkedin.com/in/aaron-bakker166" style="color: black;" class="fa fa-linkedin"</a> &nbsp;&nbsp;&nbsp;&nbsp;
-                                       <a href="https://scholar.google.com/citations?hl=en&user=ng-4XxAAAAAJ" style="color: black;" class="fas fa-graduation-cap"></a> &nbsp;&nbsp;&nbsp;&nbsp;
-                                       <a href="https://www.researchgate.net/profile/Aaron_Bakker" style="color: black;" class="fab fa-researchgate"></a> &nbsp;&nbsp;&nbsp;&nbsp;
+                                    <p style="font-size: 30px; margin-bottom: 0px;"><a href="https://www.linkedin.com/in/aaron-bakker166" style="color: black;" class="fa fa-linkedin"</a> &nbsp;&nbsp;&nbsp;&nbsp;
+                                       <a href="https://scholar.google.com/citations?hl=en&user=ng-4XxAAAAAJ" style="color: black;" class="fa fa-graduation-cap"></a> &nbsp;&nbsp;&nbsp;&nbsp;
+                                       <a href="https://www.researchgate.net/profile/Aaron_Bakker" style="color: black;" class="fa fa-researchgate"></a> &nbsp;&nbsp;&nbsp;&nbsp;
                                        <a href="https://github.com/aaronbakker" style="color: black;" class="fa fa-github"></a>
                                     </p>
                                  </div>
