--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                         <li><a href="#" data-nav-section="skills">Skills</a></li>
                         <li><a href="#" data-nav-section="experience">Work Experience</a></li>
                         <li><a href="#" data-nav-section="certifications">Certifications</a></li>
+                        <li><a href="#" data-nav-section="education">Education</a></li>
                         <li><a href="#" data-nav-section="contact">Contact</a></li>
                      </ul>
                   </div>
@@ -219,7 +220,7 @@
                            <li class="hex">
                              <div class="hexIn">
                                <a class="hexLink" href="#">
-                                 <img src="https://farm9.staticflickr.com/8461/8048823381_0fbc2d8efb.jpg" alt="" />
+                                 <img src='images/skate.jpg' alt="" />
                                  <h1>Tableau</h1>
                                  <p>Tableau</p>
                                </a>
@@ -228,7 +229,7 @@
                            <li class="hex">
                              <div class="hexIn">
                                <a class="hexLink" href="#">
-                                 <img src="https://farm5.staticflickr.com/4144/5053682635_b348b24698.jpg" alt="" />
+                                 <img src='images/basketball.jpg' alt="" />
                                  <h1>Power BI</h1>
                                  <p>Power BI</p>
                                </a>
@@ -237,16 +238,16 @@
                            <li class="hex">
                              <div class="hexIn">
                                <a class="hexLink" href="#">
-                                 <img src="https://farm3.staticflickr.com/2827/10384422264_d9c7299146.jpg" alt="" />
+                                 <img src='images/gym.jpg' alt="" />
                                  <h1>Sharepoint</h1>
-                                 <p></p>
+                                 <p>Sharepoint</p>
                                </a>
                              </div>
                            </li>
                            <li class="hex">
                              <div class="hexIn">
                                <a class="hexLink" href="#">
-                                 <img src="https://farm7.staticflickr.com/6217/6216951796_e50778255c.jpg" alt="" />
+                                 <img src='images/weights.jpg' alt="" />
                                  <h1>Azure DevOps/Git</h1>
                                  <p>Azure DevOps/Git</p>
                                </a>
@@ -255,7 +256,7 @@
                            <li class="hex">
                              <div class="hexIn">
                                <a class="hexLink" href="#">
-                                 <img src="https://farm7.staticflickr.com/6083/6055581292_d94c2d90e3.jpg" alt="" />
+                                 <img src='images/baseball.jpg' alt="" />
                                  <h1>Flowable</h1>
                                  <p>Flowable</p>
                                </a>
@@ -264,7 +265,7 @@
                            <li class="hex">
                              <div class="hexIn">
                                <a class="hexLink" href="#">
-                                 <img src="https://farm3.staticflickr.com/2827/10384422264_d9c7299146.jpg" alt="" />
+                                 <img src='images/soccer.jpg' alt="" />
                                  <h1>MS Office</h1>
                                  <p>MS Office </p>
                                </a>
@@ -273,7 +274,7 @@
                            <li class="hex">
                              <div class="hexIn">
                                <a class="hexLink" href="#">
-                                 <img src="https://farm8.staticflickr.com/7187/6895047173_d4b1a0d798.jpg" alt="" />
+                                 <img src='images/run.jpg' alt="" />
                                  <h1>Jira</h1>
                                  <p>Jira</p>
                                </a>
@@ -395,14 +396,53 @@
                      </div>
 		             <div class="row">
                         <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
-                           <div class="services color-5">
-                              <h3>Insert<br>Skill</h3>
+                           <div class="services color-1">
+                              <h3>Project Management</h3>
                            </div>
                         </div>
                         <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
                            <div class="services color-2">
-                              <span class="icon2"><i class="fa fa-code"></i></span>
-                              <h3>Insert<br>Skill</h3>
+                              <h3>Agile/Scume</h3>
+                           </div>
+                        </div>
+                        <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
+                           <div class="services color-3">
+                              <h3>Rest APIs</h3>
+                           </div>
+                        </div>
+                        <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
+                           <div class="services color-4">
+                              <h3>GIT Version Control</h3>
+                           </div>
+                        </div>
+                        <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
+                           <div class="services color-5">
+                              <h3>Data Analysis</h3>
+                           </div>
+                        </div>
+                        <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
+                           <div class="services color-1">
+                              <h3>ETL Integrations</h3>
+                           </div>
+                        </div>
+                        <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
+                           <div class="services color-2">
+                              <h3>Probability &</br>Statistics</h3>
+                           </div>
+                        </div>
+                        <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
+                           <div class="services color-3">
+                              <h3>Data Visualization</h3>
+                           </div>
+                        </div>
+                        <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
+                           <div class="services color-4">
+                              <h3>Public Speaking</h3>
+                           </div>
+                        </div>
+                        <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
+                           <div class="services color-5">
+                              <h3>Business Strategy</h3>
                            </div>
                         </div>
                      </div>
@@ -428,8 +468,8 @@
                                        <i class="fa fa-code"></i>
                                     </div>
                                     <div class="timeline-label">
-                                       <h2><a href="#">Columbia Sportswear Company</a> <span>May 2019 - May 2020</span></h2>
-                                       <p><strong>Data Governance Analyst</strong><br>Bullet 1<br>Bullet 2</p>
+                                       <h2><a href="#">Columbia Sportswear Company</a> <span>May 2019 - Current</span></h2>
+                                       <p><strong>Data Governance Analyst</strong> <br>See <strong><a href = "https://www.linkedin.com/in/aaron-bakker166/">Linkedin</a></strong> for Description</p>
                                        <p></p>
                                     </div>
                                  </div>
@@ -441,7 +481,7 @@
                                     </div>
                                     <div class="timeline-label">
                                        <h2><a href="#">Nike</a> <span>October 2018 - May 2019 </span></h2>
-                                       <p><strong>Data & Reporting Analyst</strong><br>Bullet 1 <br>Bullet 2</p>
+                                       <p><strong>Data & Reporting Analyst</strong> <br>See <strong><a href = "https://www.linkedin.com/in/aaron-bakker166/">Linkedin</a></strong> for Description</p>
                                     </div>
                                  </div>
                               </article>
@@ -468,6 +508,72 @@
                             </div>
                         </div>
                      </div>
+                     <div class="row">
+                        <div class="col-md-12">
+                           <div class="timeline-centered">
+                              <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+                                 <div class="timeline-entry-inner">
+                                    <div class="timeline-icon color-1">
+                                       <i class="fa fa-certificate"></i>
+                                    </div>
+                                    <div class="timeline-label">
+                                       <h2><a href="#">Certified Change Management Professional</a> <span>January 2020 (No Exp)</span></h2>
+                                       <p><strong>PROSCI</strong></p>
+                                       <p></p>
+                                    </div>
+                                 </div>
+                              </article>
+                              <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+                                 <div class="timeline-entry-inner">
+                                    <div class="timeline-label">
+                                       <h2><a href="#">Professional Scrum Master (PSM 1)</a> <span>October 2019 (No Exp)</span></h2>
+                                       <p><strong>Scrum.org</strong></p>
+                                    </div>
+                                 </div>
+                              </article>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </section>
+               <!------Education---------------->
+               <section class="colorlib-education" data-section="education">
+                  <div class="colorlib-narrow-content">
+                     <div class="row">
+                        <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
+                            <div class="about-desc">
+                           <h1>Education</h1>
+                           <hr>
+                            </div>
+                        </div>
+                     </div>
+                     <div class="row">
+                        <div class="col-md-12">
+                           <div class="timeline-centered">
+                              <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+                                 <div class="timeline-entry-inner">
+                                    <div class="timeline-icon color-1">
+                                       <i class="fa fa-university"></i>
+                                    </div>
+                                    <div class="timeline-label">
+                                       <h2><a href="#">M.S. Biology</a> <span>September 2014 - May 2016</span></h2>
+                                       <p><strong>Hofstra University - Hempstead, NY</p>
+                                       <p></p>
+                                    </div>
+                                 </div>
+                              </article>
+                              <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+                                 <div class="timeline-entry-inner">
+                                    <div class="timeline-label">
+                                       <h2><a href="#">B.S. Biology</a> <span>August 2007 - May 2014 </span></h2>
+                                       <p><strong>Metropolitan State University of Denver</strong></p>
+                                    </div>
+                                 </div>
+                              </article>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
                </section>
                <!--------Contact---------->
                <section class="colorlib-contact" data-section="contact">
@@ -479,7 +585,7 @@
                                <h1>Contact</h1>
                               <hr>
                                </div>
-                              <h3>Feel free to contact me with any questions! <strong><a href = "mailto: Aaron.K.Bakker@outlook.com">Aaron K Bakker at Outlook</a></strong></h3>
+                              <h3>Feel free to contact me with any questions! <strong><a href = "mailto: Aaron.K.Bakker@outlook.com">Aaron dot K dot Bakker at Outlook</a></strong></h3>
                            </div>
                            <div class="hire">
                                  <div align=center>
